[workspace]
resolver = "2"
members = [
    "block-executor"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Liam Monninger <liam@movementlabs.xyz>"]
homepage = "https://www.movementlabs.xyz"
publish = false
repository = "https://github.com/movemntdev/m2"
rust-version = "1.70"

[workspace.dependencies]
# self
block-executor = { path = "block-executor" }

# general
async-trait = { version = "0.1" } 
anyhow = { version = "1" }     # For flexible error handling
avalanche-types = { version = "0.1.3", features = ["subnet", "codec_base64"] }
movement-sdk = { path = "movement-sdk" }
futures = { version = "0.3.30" }
tokio = { version = "1.21.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_with = { version = "3.4" }
serde_yaml = { version = "0.9" }
toml = { version = "0.8", features = ["preserve_order"] }
ctor = "0.2.5"
ron = "0.8"
dirs = "3.0.2"
reqwest = { version = "0.11.6", features = ["json", "stream"] }
tempfile = "3.2.0"
semver = { version = "1.0.5", features = ["serde"] }
tar = "0.4.35"
zip = "0.6"
zip-extensions = "0.6"
flate2 = "1.0.19"
base64 = "0.13.0"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
chrono = { version = "0.4.19", features = ["clock", "serde"] }
clap = { version = "4.4.10", features = ["derive", "env", "suggestions"] }
const-str = "0.5"
tracing = { version = "0.1.27", features = ["span_event"] }

# aptos
aptos-config = { path = "../../vendors/aptos-core/config" }
aptos-consensus-types = { path = "../../vendors/aptos-core/consensus/consensus-types" }
aptos-mempool = { path = "../../vendors/aptos-core/mempool" }
aptos-runtimes = { path = "../../vendors/aptos-core/crates/aptos-runtimes" }
aptos-crypto = { path = "../../vendors/aptos-core/crates/aptos-crypto" }
aptos-db = { path = "../../vendors/aptos-core/storage/aptosdb" }
aptos-executor = { path = "../../vendors/aptos-core/execution/executor" }
aptos-logger = { path = "../../vendors/aptos-core/crates/aptos-logger" }
aptos-api-types = { path = "../../vendors/aptos-core/api/types" }
aptos-api = { path = "../../vendors/aptos-core/api" }
aptos-executor-types = { path = "../../vendors/aptos-core/execution/executor-types" }
aptos-genesis = { path = "../../vendors/aptos-core/crates/aptos-genesis" }
aptos-sdk = { path = "../../vendors/aptos-core/sdk" }
aptos-storage-interface = { path = "../../vendors/aptos-core/storage/storage-interface" }
aptos-temppath = { path = "../../vendors/aptos-core/crates/aptos-temppath" }
aptos-types = { path = "../../vendors/aptos-core/types" }
aptos-vm = { path = "../../vendors/aptos-core/aptos-move/aptos-vm" }
aptos-vm-genesis = { path = "../../vendors/aptos-core/aptos-move/vm-genesis" }