[workspace]
resolver = "2"
members = [
    "modules/sov-movevm",
    "modules/sov-aptosvm",
    "rollup",
    "stf",
    "rollup-config",
    "util/sov-movevm-types",
    "util/working-set-move-resolver",
    "util/working-set-change-set-publisher",
    "util/working-set-aptos-state-view"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Liam Monninger <liam@movementlabs.xyz>"]
homepage = "https://www.movementlabs.xyz"
publish = false
repository = "https://github.com/movemntdev/m2"
rust-version = "1.66"

[workspace.dependencies]
# aptos
aptos-api = { path = "../../../vendors/aptos-core/api" }
aptos-api-types = { path = "../../../vendors/aptos-core/api/types" }
aptos-mempool = { path = "../../../vendors/aptos-core/mempool" }
aptos-crypto = { path = "../../../vendors/aptos-core/crates/aptos-crypto" }
aptos-db = { path = "../../../vendors/aptos-core/storage/aptosdb" }
aptos-executor = { path = "../../../vendors/aptos-core/execution/executor" }
aptos-executor-types = { path = "../../../vendors/aptos-core/execution/executor-types" }
aptos-sdk = { path = "../../../vendors/aptos-core/sdk" }
aptos-types = { path = "../../../vendors/aptos-core/types" }
aptos-vm = { path = "../../../vendors/aptos-core/aptos-move/aptos-vm" }
aptos-vm-genesis = { path = "../../../vendors/aptos-core/aptos-move/vm-genesis" }
aptos-state-view = { path = "../../../vendors/aptos-core/storage/state-view" }
aptos-storage-interface = { path = "../../../vendors/aptos-core/storage/storage-interface" }
aptos-framework = { path = "../../../vendors/aptos-core/aptos-move/framework" }
aptos-executor-test-helpers = { path = "../../../vendors/aptos-core/execution/executor-test-helpers" }
aptos-consensus-types = { path = "../../../vendors/aptos-core/consensus/consensus-types"}


# sovereign-sdk
sov-rollup-interface = { path = "../../../vendors/sovereign-sdk/rollup-interface" }
risc0-adapter = { path = "../../../vendors/sovereign-sdk/adapters/risc0" }
jupiter = { path = "../../../vendors/sovereign-sdk/adapters/celestia" }
sov-modules-stf-template = { path = "../../../vendors/sovereign-sdk/module-system/sov-modules-stf-template" }
sov-modules-macros = { path = "../../../vendors/sovereign-sdk/module-system/sov-modules-macros" }
sov-state = { path = "../../../vendors/sovereign-sdk/module-system/sov-state" }
sov-modules-api = { path = "../../../vendors/sovereign-sdk/module-system/sov-modules-api" }
sov-first-read-last-write-cache = { path = "../../../vendors/sovereign-sdk/module-system/utils/sov-first-read-last-write-cache" }

sov-value-setter = { path = "../../../vendors/sovereign-sdk/module-system/module-implementations/examples/sov-value-setter" }
sov-accounts = { path = "../../../vendors/sovereign-sdk/module-system/module-implementations/sov-accounts"}
sov-sequencer-registry = { path = "../../../vendors/sovereign-sdk/module-system/module-implementations/sov-sequencer-registry"}

sov-db = { path = "../../../vendors/sovereign-sdk/full-node/db/sov-db" }
sov-schema-db = { path = "../../../vendors/sovereign-sdk/full-node/db/sov-schema-db"}
sov-ethereum = { path = "../../../vendors/sovereign-sdk/full-node/sov-ethereum" }
sov-sequencer = { path = "../../../vendors/sovereign-sdk/full-node/sov-sequencer" }
sov-evm = { path = "../../../vendors/sovereign-sdk/module-system/module-implementations/sov-evm"}

sov-bank = { path = "../../../vendors/sovereign-sdk/module-system/module-implementations/sov-bank" }
sov-election = { path = "../../../vendors/sovereign-sdk/module-system/module-implementations/examples/sov-election" }

# sovereign workspace
# Dependencies maintained by sovereign
jmt = "0.6.0"

# External dependencies
anyhow = "1.0.68"
borsh = { version = "0.10.3", features = ["rc", "bytes"] }
byteorder = "1.4.3"
bytes = "1.2.1"
hex = "0.4.3"
once_cell = "1.10.0"
prometheus = { version = "0.13.3", default-features = false }
proptest = "1.0.0"
proptest-derive = "0.3.0"
rand = "0.7.3"
rand_core = "0.5.1"
rayon = "1.5.2"
rocksdb = { version = "0.21.0", features = ["lz4"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
sha2 = "0.10.6"
digest = "0.10.6"
thiserror = "1.0.38"
tiny-keccak = "2.0.2"
tracing = "0.1.37"
bech32 = "0.9.1"
derive_more = "0.99.11"
clap = { version = "4.2.7", features = ["derive"] }
toml = "0.7.3"
jsonrpsee = "0.16.2"
tempfile = "3.5"
tokio = { version = "1", features = ["full"] }

ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
anvil  = { git = "https://github.com/foundry-rs/foundry", version = "0.1.0" }
anvil-core = { git = "https://github.com/foundry-rs/foundry", features = ["fastrlp", "serde"], version = "0.1.0" }

# aptos testing (create_publish_module)
e2e-move-tests = { path = "../../../vendors/aptos-core/aptos-move/e2e-move-tests" }

# move
# TODO: change to move submodule for better versioning
move-core-types = { path = "../../../vendors/aptos-core/third_party/move/move-core/types", version = "0.0.4" }
move-vm-types = { path = "../../../vendors/aptos-core/third_party/move/move-vm/types" }
move-binary-format = { path = "../../../vendors/aptos-core/third_party/move/move-binary-format" }
move-vm-runtime = { path = "../../../vendors/aptos-core/third_party/move/move-vm/runtime" }
move-stdlib = { path = "../../../vendors/aptos-core/third_party/move/move-stdlib" }
move-compiler = { path = "../../../vendors/aptos-core/third_party/move/move-compiler" }
move-table-extension = { path = "../../../vendors/aptos-core/third_party/move/extensions/move-table-extension" }

# internal
sov-movevm-types = { path = "./util/sov-movevm-types" }
working-set-move-resolver = { path = "./util/working-set-move-resolver" }
working-set-change-set-publisher = { path = "./util/working-set-change-set-publisher" }
working-set-aptos-state-view = { path = "./util/working-set-aptos-state-view" }