[package]
name = "block-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }

# aptos
aptos-config = { workspace = true }
aptos-consensus-types = { workspace = true }
aptos-mempool = { workspace = true }
aptos-runtimes = { workspace = true }
aptos-crypto = { workspace = true }
aptos-db = { workspace = true }
aptos-executor = { workspace = true }
aptos-logger = { workspace = true }
aptos-api-types = { workspace = true }
aptos-api = { workspace = true }
aptos-executor-types = { workspace = true }
aptos-genesis = { workspace = true }
aptos-sdk = { workspace = true }
aptos-storage-interface = { workspace = true }
aptos-temppath = { workspace = true }
aptos-types = { workspace = true }
aptos-vm = { workspace = true }
aptos-vm-genesis = { workspace = true }