[package]
name = "aptos-db-over-celestia"
description = "Implements the move cache over celestia"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
readme = "README.md"
resolver = "2"


[dependencies]
aptos-storage-interface = { workspace = true }
jupiter = { workspace = true }
