[package]
name = "sov-aptosvm"
description = "A Sovereign SDK module for aptos vm"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
readme = "README.md"
resolver = "2"


[dependencies]
dirs = "5.0"
revm = "3.3.0"
sov-modules-api = { workspace = true }
sov-modules-macros = { workspace = true }
sov-state = { workspace = true  }
sov-rollup-interface = { workspace = true }

anyhow = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
borsh = { workspace = true, features = ["rc"] }
hex = { workspace = true }
jsonrpsee = { workspace = true, features = ["macros", "client-core", "server"], optional = true }
tracing = { workspace = true }

# TODO: move these dependencies to the workspace when the EVM module is no longer in the experimental stage
ethereum-types = "0.14.1"
ethers-core = "2.0.7"
ethers-contract = "2.0.7"
ethers-middleware = { version = "2.0.7"}
ethers-providers = { version = "2.0.7"}
ethers-signers = { version = "2.0.7", default-features = false }

anvil-core  = { workspace = true }
ethers = { workspace = true }

# aptos
aptos-api = { workspace = true }
aptos-api-types = { workspace = true }
aptos-mempool = { workspace = true }
aptos-crypto = { workspace = true }
aptos-db = { workspace = true }
aptos-executor = { workspace = true }
aptos-executor-types = { workspace = true }
aptos-sdk = { workspace = true }
aptos-types = { workspace = true }
aptos-vm = { workspace = true }
aptos-vm-genesis = { workspace = true }
aptos-state-view = { workspace = true }
aptos-storage-interface = { workspace = true }

[dev-dependencies]
anvil  = { workspace = true }
primitive-types = "0.12.1"
tokio = { workspace = true }
tempfile = { workspace = true }
bytes = { workspace = true }

sov-modules-api = { workspace = true }

[features]
default = ["native"]
serde = ["dep:serde", "dep:serde_json"]
native = ["serde", "sov-state/native", "dep:jsonrpsee", "sov-modules-api/native"]
experimental = ["native"]
